src/test/ui/parser/missing_right_paren.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing_right_paren.rs:3:11
   |
LL | fn main((ؼ
   |        -- ^
   |        ||
   |        |unclosed delimiter
   |        unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/missing_right_paren.rs:3:11
   |
LL | fn main((ؼ
   |        -- ^
   |        ||
   |        |unclosed delimiter
   |        unclosed delimiter

error: expected one of `:` or `|`, found `)`
  --> $DIR/missing_right_paren.rs:3:11
   |
LL | fn main((ؼ
   |           ^ expected one of `:` or `|`

error: expected `;` or `{`, found `<eof>`
  --> $DIR/missing_right_paren.rs:3:11
   |
LL | fn main((ؼ
   |           ^ expected `;` or `{`

error: aborting due to 4 previous errors

